[ALLI-5803] Fix place hold button position in result list on mobile (#1249)

--- a/themes/finna2/less/finna/holdings.less
+++ b/themes/finna2/less/finna/holdings.less
@@ -442,6 +442,9 @@
             & .all-holdings {
                 text-align: left;
             }
+            & .title-hold {
+                float: left;
+            }
         }
     }
     & .fa.arrow {
